--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <h5 class="nav-item">Price</h5>
         <h5 class="nav-item">About</h5>
       </div>
-      <img src="./images/actions.svg" alt="actions" />
+      <img src="./images/actions.svg" alt="actions" style="width: 200px;" />
     </nav>
-    <div class="intro-section">
+    <div class="intro-section d-flex">
       <div class="left-section">
         <h3>
           New Product
@@ -60,7 +60,7 @@
             <h4>Discount</h4>
             <h1>50%</h1>
           </div>
-          <img src="./images/headphones.jpg" alt="headphone" />
+          <img src="./images/headphones.jpg" alt="headphone" style="width: 100px;" />
         </div>
         <div class="dots">
           <div class="dot yellow-dot"></div>
