--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <h4>Discount</h4>
             <h1>50%</h1>
           </div>
-          <img src="./images/headphones.jpg" alt="headphone" style="width: 100px;" />
+          <img src="./images/headphones.jpg" alt="headphone"  />
         </div>
         <div class="dots">
           <div class="dot yellow-dot"></div>
