--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <script src="https://kit.fontawesome.com/cb9a997e82.js" crossorigin="anonymous"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Poppins&display=swap"
       rel="stylesheet"
@@ -16,15 +17,18 @@
   <body>
     <nav>
       <img src="./images/logo.svg" alt="logo" />
-      <div class="nav-items">
+      <div class="nav-items desktop">
         <h5 class="nav-item active-item">Home</h5>
         <h5 class="nav-item">Product</h5>
         <h5 class="nav-item">Price</h5>
         <h5 class="nav-item">About</h5>
       </div>
-      <img src="./images/actions.svg" alt="actions" style="width: 230px;" />
+      <div class="mobile">
+        <i class="fa-solid fa-bars"></i>
+      </div >
+      <img src="./images/actions.svg" alt="actions" class="desktop" />
     </nav>
-    <div class="intro-section d-flex">
+    <div class="intro-section">
       <div class="left-section">
         <h3>
           New Product
@@ -60,7 +64,7 @@
             <h4>Discount</h4>
             <h1>50%</h1>
           </div>
-          <img src="./images/headphones.jpg" alt="headphone"  />
+          <img src="./images/headphones.jpg" alt="headphone" />
         </div>
         <div class="dots">
           <div class="dot yellow-dot"></div>
